src/app/layout/package/package-detail/package-detail-info/information/information.component.scss
.no-boder{
    border: none;
}
.textarea-content{
    resize: none;
    width: 90%;
    background-color: white;
}
.pre-content{
    width: 90%;
    background-color: white;
}
.boder-table{
    border: 1px solid #dadada;
    padding: 20px 0px 35px 30px;
    border-top: none;
    background-color: #ffff;
}
.layout-table{
    table-layout: fixed;
}
.form-control{
    min-height: 33px;
}
.text-right-m2{
    float: right;
}
.status-package {
    width: 100%;
    padding: 2px 3px;
    text-transform: uppercase;
    font-size: 0.875rem !important;
}
.status-hsmt--background {
    background-color: #2ecc71 !important;
    color: #FFFFFF !important;
}
.status-dt--background{
    background-color: #ff9300;
    color: #FFFFFF !important;
}
.status-kqdt--background{
    background-color: #ed145b;
    color: #FFFFFF !important;
}
.phase-hsmt--background {
    background-color: #eafaf1 !important;
    color: #000000 !important;
    font-size: 80% !important;
}
.phase-dt--background {
    background-color: #fff4e5 !important;
    color: #000000 !important;
    font-size: 80% !important;
}
.phase-kqdt--background {
    background-color: #fde7ee !important;
    color: #000000 !important;
    font-size: 80% !important;
}
.color-link{
    color: #00a0e3;
}

